<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FBF8">

    <!-- Profile Header -->
    <TextView
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/my_account"
        android:textColor="#002114"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Profile Settings Section -->
    <LinearLayout
        android:id="@+id/linearLayoutProfileSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_box"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Profile Section Left Hand Side Icon -->
        <ImageView
            android:id="@+id/ivManageProfileIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/profileicon"
            android:src="@drawable/ic_manage_accounts"
            app:tint="#1D1B20"
            android:layout_marginEnd="12dp"/>

        <!-- Profile Section Label -->
        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_settings"
            android:textColor="#1D1B20"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"/>

        <!-- Right Arrow Icon -->
        <ImageView
            android:id="@+id/ivArrow1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrow"
            app:tint="@android:color/black"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>

    <!-- Logout Section -->
    <LinearLayout
        android:id="@+id/linearLayoutLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_box"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutProfileSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logout Left Hand Side Icon -->
        <ImageView
            android:id="@+id/ivLogoutIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/logout_icon"
            android:src="@drawable/ic_logout"
            app:tint="#BA1A1A"
            android:layout_marginEnd="12dp"/>

        <!-- Logout Section Label -->
        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textColor="#BA1A1A"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

    <!-- Bottom Navigation Bar  -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:backgroundTint="#206A4E"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/bottom_nav_color_selector"
        app:itemTextColor="@color/bottom_nav_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
